[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/UI/HUD/game_hud.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/HUD/hud_rings.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/HUD/hud_score.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/HUD/hud_timer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/HUD/hud_lives.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/HUD/hud_boost.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Graphics/UI/GamePad/spinDash_press.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/UI/GamePad/rigth_press.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/UI/GamePad/left.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/UI/GamePad/rigth.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/UI/GamePad/left_press.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/UI/GamePad/jump.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/UI/GamePad/jump_press.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/UI/GamePad/spinDash.png" type="Texture" id=14]

[node name="game_hud" type="CanvasLayer"]
layer = 32
script = ExtResource( 1 )

[node name="hud_rings" parent="." instance=ExtResource( 2 )]
position = Vector2( 8, 8 )

[node name="hud_score" parent="." instance=ExtResource( 3 )]
position = Vector2( 8, 40 )

[node name="hud_timer" parent="." instance=ExtResource( 4 )]
position = Vector2( 8, 72 )

[node name="hud_lives" parent="." instance=ExtResource( 5 )]
position = Vector2( 8, 512 )

[node name="hud_boost" parent="." instance=ExtResource( 6 )]
margin_left = 16.0
margin_top = 446.0
margin_right = 736.0
margin_bottom = 566.0
rect_scale = Vector2( 0.35, 0.35 )

[node name="touchGamePad" type="Node2D" parent="."]

[node name="left" type="TouchScreenButton" parent="touchGamePad"]
position = Vector2( -8, 384 )
normal = ExtResource( 9 )
pressed = ExtResource( 11 )
passby_press = true

[node name="rigth" type="TouchScreenButton" parent="touchGamePad"]
position = Vector2( 200, 384 )
normal = ExtResource( 10 )
pressed = ExtResource( 8 )

[node name="jump" type="TouchScreenButton" parent="touchGamePad"]
position = Vector2( 824, 376 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )

[node name="spinDash" type="TouchScreenButton" parent="touchGamePad"]
position = Vector2( 864, 112 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 14 )
pressed = ExtResource( 7 )
shape_centered = false
shape_visible = false
[connection signal="pressed" from="touchGamePad/left" to="." method="_on_left_pressed"]
[connection signal="released" from="touchGamePad/left" to="." method="_on_left_released"]
[connection signal="pressed" from="touchGamePad/rigth" to="." method="_on_rigth_pressed"]
[connection signal="released" from="touchGamePad/rigth" to="." method="_on_rigth_released"]
[connection signal="pressed" from="touchGamePad/jump" to="." method="_on_jump_pressed"]
[connection signal="released" from="touchGamePad/jump" to="." method="_on_jump_released"]
[connection signal="pressed" from="touchGamePad/spinDash" to="." method="_on_spinDash_pressed"]
[connection signal="released" from="touchGamePad/spinDash" to="." method="_on_spinDash_released"]
